--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
     implementation project(':library')
+
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
 }
