--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".EventsActivity" />
         <activity android:name=".ImageSliderActivity"/>
         <activity android:name=".MapsActivity"/>
+        <activity android:name=".UserActivity"/>
     </application>
 
 </manifest>
