--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ImageSliderActivity"/>
         <activity android:name=".MapsActivity"/>
         <activity android:name=".UserActivity"/>
+        <activity android:name=".WishActivity"/>
     </application>
 
 </manifest>
